fixed spacing on bottom of amenities section

--- a/assets/css/zz_master.styl
+++ b/assets/css/zz_master.styl
@@ -1025,7 +1025,7 @@ section.amenities
 	#big-logo
 		max-width 75%
 	section.amenities
-		height 1950px
+		height 1850px
 		.top-row-amenities
 			height 500px
 			.artists
@@ -1141,14 +1141,14 @@ section.amenities
 
 @media (min-width: 375px)
 	section.amenities
-		height 2000px
+		height 1900px
 
 	.poster-col
 		height 350px
 
 @media (min-width: 425px)
 	section.amenities
-		height 2050px
+		height 1950px
 
 	.platinum, .gold, .general
 		&>.col-md-6>h1
@@ -1191,11 +1191,11 @@ section.amenities
 
 @media (min-width: 550px)
 	section.amenities
-		height 2200px
+		height 2100px
 
 @media (min-width: 650px)
 	section.amenities
-		height 2300px
+		height 2200px
 
 	.poster-col
 		height 600px
@@ -1340,11 +1340,11 @@ section.amenities
 
 @media (min-width: 1200px)
 	section.amenities
-		height 1800px
+		height 1700px
 
 @media (min-width: 1440px)
 	section.amenities
-		height 1800px
+		height 1700px
 
 @media (min-width: 1700px)
 	.social-block
